add exam route
